feat: If a wrong audio starts playing, stop it when we detect it was wrong.